--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 /* Body styling */
 body {
     font-family: 'Arial', sans-serif;
-    background-image: url('./images/background.png');
+    background-image: url('images/background.png');
     background-size: cover;
     color: #252525;
     line-height: 1.6;
